Fixed logo visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,12 +26,13 @@ header #top {
     margin:0;
 }
 
-.logo {
+.brand-logo {
     margin: 0;
     width: 100px;
     height: 100px;
     border-radius: 100px;
     border: 4px solid white;
+}
 
 
 /* -----------------------------------------  /Header and Customising Bootstrap Navbar ----------------------------------------- */
